--- a/package.json
+++ b/package.json
@@ -40,7 +40,9 @@
     "grunt-contrib-watch": "^1.1.0",
     "grunt-sass": "~1.1.0",
     "grunt-zip": "~0.17.1",
-    "node-sass": "^4.9.2"
+    "node-sass": "^4.9.2",
+    "lodash": ">=4.17.11",
+    "extend": ">=3.0.2"
   },
   "license": "MIT"
 }
